fix(auth): resolve profile update crashes and migrate to BLOB storage
- Added missing CUSTOMER role assignment during local user registration.
- Added defensive safeguards in UserServiceImpl to prevent auth corruption during profile updates.
- Refactored User entity to use byte[] BLOB for user_profile instead of picture_url.
- Implemented Google OAuth profile image download and BLOB storage during signup.
- Updated PUT /api/v1/users/me to accept multipart/form-data for image uploads.
- Fixed React frontend rendering crashes by replacing standard image URLs with Base64 data URIs.
- Restored missing handleLogout function in Header.jsx to fix React render failures.