@@ -24,6 +24,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
@@ -71,8 +74,13 @@ public class UserServiceImpl implements UserService {
             user.setRoles(roles);
 
         } else {
-            roleRepository.findByName("ROLE_USER")
-                    .ifPresent(role -> user.setRoles(List.of(role)));
+            // Default to the CUSTOMER role which is used across auth flows
+            Role customerRole = roleRepository.findByName("CUSTOMER")
+        .orElseThrow(() ->
+                new IllegalStateException("Default CUSTOMER role not found"));
+
+        user.setRoles(
+                new ArrayList<>(Collections.singletonList(customerRole)));
         }
 
         return mapToResponse(userRepository.save(user));
@@ -276,18 +284,25 @@ public UserProfileResponseDTO getCurrentUserProfile() {
 
     String email = authentication.getName();
 
-    User user = userRepository.findByEmail(email)
+        User user = userRepository.findByEmailWithRoles(email)
             .orElseThrow(() ->
-                    new UserNotFoundException(
-                            "User not found with email: " + email));
+                new UserNotFoundException(
+                    "User not found with email: " + email));
 
     return UserProfileResponseDTO.builder()
             .userId(user.getUserId())
             .name(user.getName())
             .email(user.getEmail())
             .phoneNumber(user.getPhoneNumber())
-            .pictureUrl(user.getPictureUrl())
+            .profileImage(encodeProfileImage(user.getUserProfile()))
             .build();
+}
+
+private String encodeProfileImage(byte[] imageBytes) {
+    if (imageBytes == null || imageBytes.length == 0) {
+        return null;
+    }
+    return Base64.getEncoder().encodeToString(imageBytes);
 }
 
 @Override
@@ -298,25 +313,54 @@ public UserProfileResponseDTO updateUserProfile(UserProfileRequestDTO request) {
 
     String email = authentication.getName();
 
-    User user = userRepository.findByEmail(email)
+    User user = userRepository.findByEmailWithRoles(email)
             .orElseThrow(() ->
                     new UserNotFoundException(
                             "User not found with email: " + email));
+        // System.out.println("BEFORE UPDATE ROLES: " + user.getRoles()); line added fo debugging
 
-    user.setName(request.getName());
+    log.info("Updating profile for user: {}", email);
+    log.info("Incoming request: {}", request);
 
-    if (request.getPhoneNumber() != null) {
+    // Update only non-null fields
+    if (request.getName() != null && !request.getName().isBlank()) {
+        user.setName(request.getName());
+    }
+
+    if (request.getPhoneNumber() != null &&
+            !request.getPhoneNumber().isBlank()) {
         user.setPhoneNumber(request.getPhoneNumber());
     }
 
+    // Handle profile image safely
+    if (request.getProfileImageBytes() != null &&
+            request.getProfileImageBytes().length > 0) {
+
+        log.info("Updating profile image for user: {}", email);
+
+        user.setUserProfile(request.getProfileImageBytes());
+    }
+
+    // Prevent accidental auth corruption
+    if (user.getEmail() == null || user.getEmail().isBlank()) {
+        throw new IllegalStateException("User email became null during profile update");
+    }
+
+    if (user.getRoles() == null || user.getRoles().isEmpty()) {
+        throw new IllegalStateException("User roles became empty during profile update");
+    }
+
     User updatedUser = userRepository.save(user);
+
+    log.info("Profile updated successfully for user: {}", email);
 
     return UserProfileResponseDTO.builder()
             .userId(updatedUser.getUserId())
             .name(updatedUser.getName())
             .email(updatedUser.getEmail())
             .phoneNumber(updatedUser.getPhoneNumber())
-            .pictureUrl(updatedUser.getPictureUrl())
+            .profileImage(encodeProfileImage(updatedUser.getUserProfile()))
             .build();
-    }
+
+        }
 }
